src/css/base.css
html {
  @apply text-xl leading-normal font-body bg-white;
}

html:lang("ja") {
  @apply leading-loose;
}

a {
  @apply text-water-500 underline;
}

a:hover,
a:focus,
a:active {
  @apply text-water-700;
}

img {
  max-width: 100%;
}

/* purgecss ignore */
[href="#main"] {
  @apply absolute top-0 z-50;
  right: 100%;
}

/* purgecss ignore */
[href="#main"]:focus {
  @apply right-auto bg-white p-2;
}

[tabindex="-1"] {
  outline: none;
}

.frame {
  @apply mx-auto px-4 max-w-4xl;
}

.page {
  @apply min-h-screen pb-16;
}

.page__title {
  @apply mt-16 mb-4 font-bold text-3xl;
}

.page-footer {
  @apply text-sm bg-gray-800 text-gray-200;
}

.page-footer__wrapper {
  @apply py-8;
}

.base-content * + * {
  @apply mt-4;
}

.base-content h1 {
  @apply font-bold text-3xl;
}

.base-content h2 {
  @apply font-bold text-xl;
}

.base-content h3 {
  @apply font-bold;
}

.base-content h4 {
  @apply text-gray-700;
}

.logo-list {
  @apply grid gap-2 -mt-4;
  grid-template-columns: repeat(auto-fit, minmax(6rem, 0.5fr));

  & li {
    @apply block;
  }
}

.aspect-ratio {
  @apply block relative pb-1/1;
}

.aspect-ratio-1\/2 {
  @apply pb-1/2;
}

.aspect-ratio__inner {
  @apply absolute top-0 left-0 h-full w-full;
}

.tpp-logo-link {
  @apply border border-transparent rounded bg-white p-4 flex justify-center items-center transition duration-150 ease-in-out transform;

  &:hover,
  &:active,
  &:focus {
    @apply border-water-150 bg-water-100 -translate-y-1 shadow-md z-10;
  }
}

.tpp-logo-link__img {
  @apply flex-1 max-h-full object-contain;
}

.section {
  @apply border-t-4 pt-2;
}

.section__title {
  @apply mb-8 text-xl text-gray-600;
}

/* print.css */
@media print {
  body > *:not(main) {
    @apply hidden;
  }
}

